add new location hidden in modal

--- a/monitor/no-gatsby/monitor-buoy/src/style/grid.css
+++ b/monitor/no-gatsby/monitor-buoy/src/style/grid.css
@@ -11,3 +11,8 @@ ul.monitors {
 ul.monitors li {
   max-width: 100%;
 }
+
+
+* {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
