--- a/monitor/no-gatsby/monitor-buoy/src/style/grid.css
+++ b/monitor/no-gatsby/monitor-buoy/src/style/grid.css
@@ -16,3 +16,7 @@ ul.monitors li {
 * {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+
+body {
+  background: #2a2a2b
+}
